--- a/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-034-016"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-11T09:29:24.176Z" user="admin">11/01/2023 09:29:24</note>
+                <note type="lastUpdated" date-time="2023-02-09T08:50:22.787Z" user="admin">09/02/2023 08:50:22</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">3</note>
@@ -51,6 +51,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-11T09:29:18.653Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-02-09T08:50:17.156Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-02-09T08:50:17.156Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
