--- a/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
@@ -18,10 +18,11 @@
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                 <sponsor ref="sponsors.xml#sponsor-186">苏享国阖家, 马春树, 苏慧, 姚雨含, 马鑫, 刘弈汐, 林媛媛, 黄璎珞</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2019</date>
+                <edition>v 0.0.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-09T09:10:15.389Z" user="admin">09/02/2023 09:10:15</note>
+                <note type="lastUpdated" date-time="2023-02-09T09:10:58.368Z" user="admin">09/02/2023 09:10:58</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:23.782Z" user="mike">2.h</note>
@@ -64,6 +65,7 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-02T14:08:35.061Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-02-09T09:10:11.12Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-02-09T09:10:11.12Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-02-09T09:10:56.892Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
