--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-08T16:28:12.037Z" user="admin">08/02/2023 16:28:12</note>
+        <note type="lastUpdated" date-time="2023-02-09T15:25:53.768Z" user="admin">09/02/2023 15:25:53</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -105,6 +105,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-02-08T16:28:09.199Z" user="martina-cotter">updated glossary entry.</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2023-02-09T15:25:50.9Z" user="john">Added the (1) to the refs to Toh 309 in text, note, and biblio, and to title under "The Translation."</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -288,8 +289,8 @@
               and <foreign xml:lang="Sa-Ltn" type="quote">ity āryānityatāsūtraṃ
               samāptaṃ</foreign>.</note> This brief colophon is seen in the majority of witnesses to
               <title xml:lang="en">The Sūtra on Impermanence</title> within the Tibetan Kangyurs.
-            However, there are three witnesses with expanded colophons: two witnesses in the Lang
-            mdo collection and one in the Namgyal Kangyur.<note place="end" xml:id="UT22084-072-010-24"> These colophons are: 
+            However, there are three witnesses with expanded colophons: two witnesses in the Langdo
+            (<foreign xml:lang="Bo-Ltn">lang mdo</foreign>) collection and one in the Namgyal Kangyur.<note place="end" xml:id="UT22084-072-010-24"> These colophons are: 
               <q>Lg29.4, mdo, Ha-L15 9b4–11b3:<foreign xml:lang="Bo-Ltn" type="quote"> myi rtag pa nyid kyi mdo’ rdzogs s+ho / rgya gar kyi
                 mkhan po ka ma la gub tra dang / zhu chen gyi lo tsha ba dge’ slong rin chen bzang
                 pos bsgyur zhing zhus te gtan la phab pa / </foreign>
@@ -314,10 +315,10 @@
             Tibetan versions of <title xml:lang="en">The Sūtra on Impermanence</title> within the
             various Kangyurs. <title xml:lang="en">The Sūtra on Impermanence</title> is always
             included in the General Sūtra Section in all Kangyurs. There is another work titled
-              <title xml:lang="en">The Sūtra on Impermanence</title> (<title xml:lang="Sa-Ltn">Anityatāsūtra</title>),<note place="end" xml:id="UT22084-072-010-739">See Sakya
+              <title xml:lang="en">The Sūtra on Impermanence (1)</title> (<title xml:lang="Sa-Ltn">Anityatāsūtra</title>),<note place="end" xml:id="UT22084-072-010-739">See Sakya
               Pandita Translation Group, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh309.html">The Sūtra on
-                  Impermanence</ref>
+                  Impermanence (1)</ref>
                             </title>, Toh 309 (84000: Translating the Words of the Buddha,
               2021).</note> Toh 309, appearing directly before Toh 310, the sūtra translated here.
             While these two works share a title and theme, their content differs, and they are each
@@ -398,7 +399,7 @@
     <body>
       <div type="translation">
         <head type="translation" tid="21"> The Translation </head>
-        <head type="titleMain" tid="23">The Sūtra on Impermanence</head>
+        <head type="titleMain" tid="23">The Sūtra on Impermanence (2)</head>
         <div type="section" xml:id="UT22084-072-010-section-1">
           <milestone unit="chunk" xml:id="UT22084-072-010-766"/>
           <p tid="27">
@@ -798,7 +799,7 @@
           <bibl xml:id="UT22084-072-010-124">Rhys Davids, T. W., and William Stede. <title xml:lang="en">The Pali Text Society’s Pali-English Dictionary</title>. London: Pali
             Text Society, 1921–25.</bibl>
           <bibl xml:id="UT22084-072-010-125">Sakya Pandita Translation Group, trans. <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/UT22084-072-009.html#UT22084-072-009-7">The Sūtra on Impermanence</ref>
+                            <ref target="https://read.84000.co/translation/UT22084-072-009.html#UT22084-072-009-7">The Sūtra on Impermanence (1)</ref>
                         </title> (<title xml:lang="Sa-Ltn">Anityatāsūtra</title>, Toh 309). 84000: Translating the Words of the Buddha.
             2013.</bibl>
           <bibl xml:id="UT22084-072-010-126">Shakya, M. B. “Āryānityātāsūtra.” <title xml:lang="en">Buddhist Himalaya</title> 1, no. 1 (1988): 58–60 [1–3].</bibl>
