--- a/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
+++ b/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
@@ -6,18 +6,19 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Array of the Buddhafields</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">buddhakṣetravyūhanirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="zh">《說示佛國土莊嚴經》(大正藏:《佛說莊嚴王陀羅尼咒經》)</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi zhing gi bkod pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">The Sūtra, The Array of the Buddhafields</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­tathāgatādhiṣṭhānasattvāvalokena buddhakṣetravyūha­nirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvatathāgatādhiṣṭhāna­sattvāvalokena buddhakṣetra­nirdeśanavyūha­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgatādhiṣṭhāna­sattvāvalokena buddha­kṣetranirdeśanavyūha­mahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -45,10 +46,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:54:15.763Z" user="admin">25/08/2022 10:54:15</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:01:14.417Z" user="admin">10/02/2023 13:01:14</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T10:54:07.555Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-10T13:01:08.774Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
