--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -4,11 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma mkhan bzang po lung bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bhadramāyākaravyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Prophecy for the Magician Bhadra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bhadramāyākaravyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma mkhan bzang po lung bstan pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="zh">《幻師仁賢授記經》(大正藏:《大寶積經授幻師跋陀羅記會第二十一》</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-39"/>
                 <author role="translatorEng" ref="contributors.xml#person-95">Celso Wilkinson</author>
                 <author role="translatorEng" ref="contributors.xml#person-92">Laura Goetz</author>
@@ -19,7 +20,7 @@
                 <editor role="projectEditor" ref="contributors.xml#person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,12 +40,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-06T12:46:18.916Z" user="admin">06/08/2021 12:46:18</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:42:32.43Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:42:32.43Z" user="john">3</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:05:32.167Z" user="admin">10/02/2023 13:05:32</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:42:32.43Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:42:32.43Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2023-02-10T13:05:26.536Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
