--- a/translations/kangyur/placeholders/044-009_toh88-the_mass_of_jewels.xml
+++ b/translations/kangyur/placeholders/044-009_toh88-the_mass_of_jewels.xml
@@ -4,20 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rin po che'i phung po'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ratnarāśisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Mass of Jewels</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rin po che'i phung po zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ratnarāśisūtra</title>
+                <title type="mainTitle" xml:lang="zh">《寶聚經》(大正藏:《大寶積經賓梁聚會第四十四》)</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rin po che'i phung po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaratnarāśināmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rin po che'i phung po zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-49"/>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-044-009"/>
                 <date/>
             </publicationStmt>
@@ -33,12 +34,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-11-12T11:01:12.127Z" user="admin">12/11/2020 11:01:12</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:17:48.059Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:17:48.059Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:00:38.961Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:00:38.961Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:01:10.215Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:13:36.556Z" user="admin">10/02/2023 13:13:36</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:17:48.059Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:17:48.059Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:00:38.961Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:00:38.961Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:01:10.215Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-09-29T11:57:59.541Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-29T11:57:59.541Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-10T13:13:30.907Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
