--- a/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
+++ b/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
@@ -4,11 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bu mo zla mchog lung bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">candrottarādārikāvyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Prophecy Concening the Girl Candrottarā</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo zla mchog lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">candrottarādārikāvyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="zh">《童女最上月授記經》(大正藏:《佛說月上女經》)</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bu mo zla mchog lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacandrottarā­dārikāvyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo zla mchog lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-2"/>
                 <author role="translatorEng" ref="contributors.xml#person-5">Annie Bien</author>
                 <editor role="projectEditor" ref="contributors.xml#person-74">Ryan Damron</editor>
@@ -17,7 +18,7 @@
                 <editor role="reviser" ref="contributors.xml#person-11">Leslie Kriesel</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -37,14 +38,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-03T08:59:16.869Z" user="admin">03/05/2021 08:59:16</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:29:45.166Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:19:08.648Z" user="admin">10/02/2023 13:19:08</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:29:45.166Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-03T07:27:34.764Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-03T08:24:26.764Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-03T08:24:26.764Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-03T08:59:12.338Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-02-10T13:19:03.034Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
