--- a/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
+++ b/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">acintyabuddhaviṣayanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Unfathomable Sphere of a Buddha</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">acintyabuddhaviṣayanirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryācintyabuddhaviṣaya­nirdeśa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-34"/>
                 <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
                 <author role="translatorEng" ref="contributors.xml#person-203">Jed Forman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -33,14 +34,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-23T13:08:21.595Z" user="admin">23/08/2021 13:08:21</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:20:55.076Z" user="admin">10/02/2023 13:20:55</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-12-09T08:14:10.687Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-09T08:14:10.687Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T10:47:16.601Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-04T10:47:35.919Z" user="line-tofte">Auto (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-10T13:20:49.412Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
