--- a/translations/kangyur/placeholders/071-009_toh295-the_sutra_of_throwing_stones.xml
+++ b/translations/kangyur/placeholders/071-009_toh295-the_sutra_of_throwing_stones.xml
@@ -4,11 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo 'phangs pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śilākṣiptasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Throwing Stones</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo 'phangs pa'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">śilākṣiptasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo 'phangs pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="zh">《石投經》</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśilākṣiptasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo 'phangs pa'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-19"/>
                 <author role="translatorEng" ref="contributors.xml#person-123">Ruth Gamble</author>
                 <author role="translatorEng" ref="contributors.xml#person-126">Tenzin Ringpapontsang</author>
@@ -17,7 +18,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-123">Ruth Gamble</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -36,10 +37,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-10T13:28:29.105Z" user="admin">10/11/2022 13:28:29</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-27T12:41:23.747Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-09T12:16:24.332Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-10T13:28:22.394Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-10T13:28:22.394Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:25:09.399Z" user="admin">10/02/2023 13:25:09</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-27T12:41:23.747Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-09T12:16:24.332Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-10T13:28:22.394Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-10T13:28:22.394Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-10T13:25:03.728Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
