--- a/translations/kangyur/placeholders/005-001_toh2-pratimoksa_sutra.xml
+++ b/translations/kangyur/placeholders/005-001_toh2-pratimoksa_sutra.xml
@@ -6,13 +6,13 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Prātimokṣa Sūtra</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">prātimokṣasūtra</title>
-                <title type="mainTitle" xml:lang="zh">《波羅提木叉經》(大正藏:《根本說一切有部苾芻尼戒經》)</title>
+                <title type="mainTitle" xml:lang="zh">《波羅提木叉經》(大正藏:《根本說一切有部戒經》)</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">so sor thar pa'i mdo/</title>
                 <author role="translatorMain" ref="contributors.xml#team-9"/>
                 <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2021</date>
+                <edition>v 0.1.6 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -35,13 +35,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:26:22.4Z" user="admin">10/02/2023 13:26:22</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:27:02.484Z" user="admin">10/02/2023 13:27:02</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T09:55:28.026Z" user="john">3</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-02-23T17:02:50.644Z" user="john">Changed title to reflect Prātimokṣa decision</note>
                 <note type="updated" update="text-version" value="0.1.3" date-time="2022-06-27T16:24:18.061Z" user="celso">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.1.4" date-time="2022-06-27T16:26:00.81Z" user="celso">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.1.5" date-time="2023-02-10T13:26:16.735Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-02-10T13:26:56.768Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
