--- a/translations/kangyur/placeholders/009-002_toh5-detailed_explanations_on_nuns_discipline.xml
+++ b/translations/kangyur/placeholders/009-002_toh5-detailed_explanations_on_nuns_discipline.xml
@@ -7,11 +7,12 @@
                 <title type="mainTitle" xml:lang="en">Detailed Explanations on Nuns’ Discipline</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">bhikṣunīvinayavibhaṅga</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dge slong ma'i 'dul ba rnam par 'byed pa/</title>
+                <title type="mainTitle" xml:lang="zh">《比丘尼律分别》(大正藏:《根本說一切有部苾芻尼毘奈耶》)</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-412">Annie Heckman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -36,10 +37,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T12:59:07.068Z" user="admin">30/06/2022 12:59:07</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:28:43.499Z" user="admin">10/02/2023 13:28:43</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:58:21.723Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T12:58:21.723Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T12:59:05.011Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-10T13:28:37.844Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
