--- a/translations/kangyur/placeholders/003-012_toh1-17-chapter_17_on_schisms_in_the_sangha.xml
+++ b/translations/kangyur/placeholders/003-012_toh1-17-chapter_17_on_schisms_in_the_sangha.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 17: On Schisms in the Saṅgha</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">saṅghabhedavastu</title>
-                <title type="mainTitle" xml:lang="zh">《17. 破僧伽本事》</title>
+                <title type="mainTitle" xml:lang="zh">「律儀根本」之《破僧伽本事》</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dge 'dun gyi dbyen gyi gzhi/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Saṅghabhedavastu</title>
                 <author role="translatorMain" ref="contributors.xml#team-26"/>
@@ -14,7 +14,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-165">Robert Miller</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -35,9 +35,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:29:26.642Z" user="admin">10/02/2023 13:29:26</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:31:17.996Z" user="admin">10/02/2023 13:31:17</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-10T13:29:20.959Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-10T13:31:12.266Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
