--- a/translations/kangyur/placeholders/074-002_toh341-the_sutra_of_the_wise_and_foolish.xml
+++ b/translations/kangyur/placeholders/074-002_toh341-the_sutra_of_the_wise_and_foolish.xml
@@ -6,8 +6,8 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Wise and Foolish</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">(damamūka)</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mdzangs blun gyi mdo/</title>
                 <title type="mainTitle" xml:lang="zh">《賢愚經》(大正藏:《賢愚經》)</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mdzangs blun gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdzangs blun zhes bya ba'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-49"/>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
@@ -16,7 +16,7 @@
                 <sponsor ref="eft:sponsor-1">Kris Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:40:56.145Z" user="admin">10/02/2023 13:40:56</note>
+                <note type="lastUpdated" date-time="2023-02-10T13:42:10.238Z" user="admin">10/02/2023 13:42:10</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="0" date-time="2020-03-26T12:30:13.684Z" user="line-tofte"/>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-22T13:24:02.005Z" user="line-tofte">3</note>
@@ -47,6 +47,7 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-21T16:14:20.319Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-02-10T13:36:23.873Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-02-10T13:40:50.481Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-02-10T13:42:04.539Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
