--- a/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -9,9 +9,10 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyag na rdo rje gnod sbyin gyi bdag po'i gzungs/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -30,7 +31,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-06T10:36:07.693Z" user="admin">06/02/2023 10:36:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-02-13T07:46:13.795Z" user="admin">13/02/2023 07:46:13</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-13T07:46:08.139Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
