--- a/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
+++ b/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
@@ -13,7 +13,7 @@
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa blo gros rgya mtshos zhus pa zhes bya ba theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་བློ་གྲོས་རྒྱ་མཚོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sāgaramati­paripṛcchā­sūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa’i mdo/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa’i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《海意菩薩所問淨印法門經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/> under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -29,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-5">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, and Zhao Xuan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.17 <date>2022</date>
+                <edition>v 1.5.18 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T17:28:40.791Z" user="admin">20/01/2023 17:28:40</note>
+                <note type="lastUpdated" date-time="2023-02-13T18:04:39.784Z" user="admin">13/02/2023 18:04:39</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:14:35.787Z" user="mike">2.d</note>
@@ -139,6 +139,7 @@
                 <note type="updated" update="text-version" value="1.5.15" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.5.16" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.5.17" date-time="2023-01-20T17:28:37.865Z" user="martina-cotter">updated footnote</note>
+                <note type="updated" update="text-version" value="1.5.18" date-time="2023-02-13T18:04:36.788Z" user="john">Edited to change "go with the flow" (2.4).</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -962,7 +963,8 @@
                         beings.</p>
                     <milestone unit="chunk" xml:id="UT22084-058-001-276"/>
                     <p tid="271">“The point is that the Great Vehicle is a vehicle that does not conform to the world. Why is this? Beings always go
-                        with the flow. I wish to deliberately go against the stream. Beings cannot manage to be harmonious with one another. <ref cRef="F.14.b" type="folio" xml:id="UT22084-058-001-3034"/> I wear the armor that allows me to discard whatever would cause
+                        along with the stream. I wish to deliberately go against the stream. Beings cannot manage to be harmonious with one another. 
+                        <ref cRef="F.14.b" type="folio" xml:id="UT22084-058-001-3034"/> I wear the armor that allows me to discard whatever would cause
                         disharmony with beings. Beings act like heroes when it comes to malice. I seek out acceptance and gentleness. Beings are
                         always fed up with one another. I seek to appease them by means of insight.</p>
                     <milestone unit="chunk" xml:id="UT22084-058-001-277"/>
