--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-27">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.19 <date>2021</date>
+                <edition>v 1.33.22 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-06T18:32:16.179Z" user="admin">06/12/2022 18:32:16</note>
+                <note type="lastUpdated" date-time="2023-02-15T18:59:53.902Z" user="admin">15/02/2023 18:59:53</note>
                 <note type="updated" update="text-version" value="v 1.31" date-time="2019-06-18T16:17:31.913Z" user="celso">v 1.31 2019</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-21T14:35:28.064Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-10-02T17:40:45.868Z" user="celso">Corrected wylie typo in
@@ -96,6 +96,9 @@
     <note type="updated" update="text-version" value="1.33.17" date-time="2021-11-10T09:34:08.762Z" user="andre">correction in glossary highlights</note>
     <note type="updated" update="text-version" value="1.33.18" date-time="2022-04-08T17:54:49.854Z" user="martina-cotter">updated links to Toh 94</note>
     <note type="updated" update="text-version" value="1.33.19" date-time="2022-12-06T18:32:13.361Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.33.20" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.33.21" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.33.22" date-time="2023-02-15T18:59:51.039Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -225,7 +228,9 @@
                         from the <title xml:lang="Sa-Ltn">Ratnakūṭa</title>, the <title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title> (Toh
                             47)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh47.html"/>, <title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title> (Toh 56)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh56.html"/>, <title xml:lang="Sa-Ltn">Bhadra­māyākāra­vyākaraṇa</title> (Toh
                             65)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh65.html"/>, <title xml:lang="Sa-Ltn">Mahā­pratihārya­nirdeśa</title> (Toh 66)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh66.html"/>, <title xml:lang="Sa-Ltn">Maitreya­mahā­siṃha­nāda</title> (Toh
-                            67)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh67.html"/>, and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
+                        67)<note place="end" xml:id="UT22084-061-006-294">See Liljenberg, Karen and Pagel, Ulrich. trans. <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh67.html">The Great Lion’s Roar of Maitreya</ref>
+                            </title>, Toh 67.</note>, and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
                                 sde</title>, the <title xml:lang="Sa-Ltn">Bhadra­kalpika</title> (Toh 94),<note place="end" xml:id="UT22084-061-006-290">See
                                     Dharmachakra Translation Committee, trans. <title xml:lang="en">
                                         <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
@@ -1228,18 +1233,20 @@
                         <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
                     </title> (<title xml:lang="Sa-Ltn">Bhadra­kalpika</title>, Toh 94). 84000: Translating the Words of the Buddha,
                         2022.</bibl>
-                    <bibl xml:id="UT22084-061-006-293">Mahamegha Translation Team (2022), trans. <title xml:lang="en">
-                        <ref target="https://read.84000.co/translation/toh232.html">The Great Cloud (1)</ref>
-                        </title>
-                        (<title xml:lang="Sa-Ltn">Mahāmegha</title>, Toh 232). 84000: Translating the Words of the Buddha,
-                        2018.</bibl>
                     <bibl xml:id="UT22084-061-006-120">Edgerton, Franklin. <title xml:lang="en">Buddhist Hybrid Sanskrit Grammar and
                             Dictionary</title>. Vol. 2: Dictionary. New Haven: Yale University Press, 1953.</bibl>
                     <bibl xml:id="UT22084-061-006-121">La Vallée Poussin, Louis de, trans. <title xml:lang="en">Abhidharmakośabhāṣya of
                             Vasubandhu</title>. Berkeley: Asian Humanities Press, 1988–90.</bibl>
                     <bibl xml:id="UT22084-061-006-122">Lamotte, Etienne, trans. <title xml:lang="en">Śūraṃgamasamādhisūtra: The Concentration of
                             Heroic Progress</title>. Delhi: Motilal Banarsidass, 2003.</bibl>
-                    
+                    <bibl xml:id="UT22084-061-006-295">Liljenberg, Karen and Pagel, Ulrich, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh67.html">The Great Lion’s Roar of Maitreya</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Maitreya­mahā­siṃhanāda</title>, Toh 67). 84000: Translating the Words of the Buddha, 2023.</bibl>
+                    <bibl xml:id="UT22084-061-006-293">Mahamegha Translation Team (2022), trans. <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh232.html">The Great Cloud (1)</ref>
+                        </title>
+                        (<title xml:lang="Sa-Ltn">Mahāmegha</title>, Toh 232). 84000: Translating the Words of the Buddha,
+                        2018.</bibl>
                     <bibl xml:id="UT22084-061-006-280">Padmakara Translation Group, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh11.html">The Transcendent Perfection of Wisdom in Ten Thousand
                                 Lines</ref>
