--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -4,42 +4,35 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge ’dzin gyi ’khor
-                                        lo</title>
-                                <title type="mainTitle" xml:lang="bo">ཏིང་ངེ་འཛིན་གྱི་འཁོར་ལོ།</title>
                                 <title type="mainTitle" xml:lang="en">The Wheel of Meditative
                                         Concentration</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Samādhicakra</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ting nge ’dzin
-                                        gyi ’khor lo zhes bya ba theg pa chen po’i mdo</title>
-                                <title xml:lang="bo" type="longTitle">འཕགས་པ་ཏིང་ངེ་འཛིན་གྱི་འཁོར་ལོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="mainTitle" xml:lang="bo">ཏིང་ངེ་འཛིན་གྱི་འཁོར་ལོ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge ’dzin gyi ’khor
+                                        lo</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
                                         Wheel of Meditative Concentration”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­samādhi­cakra­nāmamahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <author ref="eft:team-28" role="translatorMain">Translated by the
+                                <title xml:lang="bo" type="longTitle">འཕགས་པ་ཏིང་ངེ་འཛིན་གྱི་འཁོར་ལོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ting nge ’dzin
+                                        gyi ’khor lo zhes bya ba theg pa chen po’i mdo</title>
+                                <author role="translatorMain" ref="eft:team-28">Translated by the
                                         Sarasvatī Translation Team <lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
                                 <author role="translatorEng" ref="eft:person-186">Zhuo Siyu</author>
                                 <editor role="reviser" ref="eft:person-303">Eleanor Brunnen</editor>
-                                <author role="translatorEng" ref="eft:person-185">Shenghai
-                                        Li</author>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
-                                <consultant role="projectManager" ref="eft:person-186">Zhuo
-                                        Siyu</consultant>
-                                <editor role="copyEditor" ref="eft:person-422">George
-                                        FitzHerbert</editor>
-                                <editor role="copyEditor" ref="eft:person-249">Konchog
-                                        Norbu</editor>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
+                                <author role="translatorEng" ref="eft:person-185">Shenghai Li</author>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                                <consultant role="projectManager" ref="eft:person-186">Zhuo Siyu</consultant>
+                                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
+                                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -79,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-27T08:24:55.192Z" user="admin">27/01/2023 08:24:55</note>
+                                <note type="lastUpdated" date-time="2023-02-17T09:16:57.111Z" user="admin">17/02/2023 09:16:57</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -118,8 +111,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.1.14" date-time="2023-01-16T12:51:45.712Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-17T09:16:51.453Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
