--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,10 +32,10 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -57,7 +57,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-01-17</date>
+                <date>2023-02-17</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh241" type="text">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-17T09:16:57.111Z" user="admin">17/02/2023 09:16:57</note>
+                                <note type="lastUpdated" date-time="2023-02-17T20:36:53.364Z" user="admin">17/02/2023 20:36:53</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -114,6 +114,8 @@
                                 <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:24:49.544Z" user="line-tofte">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-17T09:16:51.453Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2023-02-17T20:36:47.726Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-02-17T20:36:47.726Z" user="martina-cotter">First published version</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -178,11 +180,9 @@
                                                   p. 189, n. 61; Saerji 2011, p. 189.</note> It is
                                                 one of a handful of sūtras found in the Degé Kangyur
                                                 whose Chinese sources have not been identified.<note place="end" xml:id="UT22084-065-004-10"> Silk
-                                                  2019, p. 239.</note> In addition to the Degé
-                                                Kangyur, only the Tshalpa (<foreign xml:lang="Bo-Ltn">tshal pa</foreign>), Lhasa, and
-                                                Narthang Kangyurs contain <title xml:lang="en">The
-                                                  Wheel of Meditative Concentration</title>, and
-                                                only the Lhasa version has a colophon, which simply
+                                                  2019, p. 239.</note> In addition to the Degé Kangyur, <title xml:lang="en">The
+                                                        Wheel of Meditative Concentration</title> is only found in Kangyurs of the Tshalpa (<foreign xml:lang="Bo-Ltn">tshal pa</foreign>) group and in the Lhasa and Narthang Kangyurs. 
+                                                Among those, only the Lhasa version has a colophon, which simply
                                                 identifies the Indian abbot Śīladharma and Nampar
                                                 Mitokpa (<foreign xml:lang="Bo-Ltn">rnam par mi rtog
                                                   pa</foreign>) as its translators from
@@ -664,14 +664,6 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-065-004-93">
-                                                  <term>greatly conceited</term>
-                                                  <term xml:lang="Bo-Ltn">mngon pa’i nga rgyal can </term>
-                                                  <term xml:lang="bo">མངོན་པའི་ང་རྒྱལ་ཅན།</term>
-                                                  <term xml:lang="Sa-Ltn">ābhimānika</term>
-                                                </gloss>
-                    </item>
-                                        <item>
                         <gloss type="term" xml:id="UT22084-065-004-94">
                                                   <term>arhat</term>
                                                   <term xml:lang="Bo-Ltn">dgra bcom pa </term>
@@ -696,18 +688,8 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-065-004-97">
-                                                  <term>vessel</term>
-                                                  <term xml:lang="Bo-Ltn">snod </term>
-                                                  <term xml:lang="bo">སྣོད།</term>
-                                                  <term xml:lang="Sa-Ltn"/>
-                                                  <term type="alternative">suitable vessel,
-                                                  receptacle</term>
-                                                </gloss>
-                    </item>
-                                        <item>
                         <gloss type="term" xml:id="UT22084-065-004-98">
-                                                  <term>adamantine base</term>
+                                                <term>vajra base</term>
                                                   <term xml:lang="Bo-Ltn">rdo rje’i gzhi </term>
                                                   <term xml:lang="bo">རྡོ་རྗེའི་གཞི།</term>
                                                   <term xml:lang="Sa-Ltn"/>
